fix gap

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 
   display: grid;
   grid-template-columns: 1fr min(60ch, calc(100% - (var(--center-col-padding) * 2))) 1fr;
-  gap: var(--center-col-padding);
+  column-gap: var(--center-col-padding);
   background-color: bisque;
 }
 
